fixed missing panel